feat: add fonts, logo, and initial site structure
Add Helvetica font family files, Greenheck logo, and implement basic site structure including header, styles, and interactive JavaScript for mobile navigation and search functionality.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>HeaderTemplate</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Greenheck - Building Value in Air</title>
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="site-header__container">
+        <div class="site-header__top-bar">
+          <div class="site-header__center">
+            <div class="site-header__center-text">
+              Experience Best-In-Class Product Selection with
+            </div>
+            <a href="#" class="site-header__ecaps-button">eCAPS</a>
+          </div>
+          <div class="site-header__right">
+            <a href="#" class="site-header__login-button">Login</a>
+            <a href="#" class="site-header__register-button">Register</a>
+          </div>
+        </div>
+        <div class="site-header__logo-nav-bar">
+          <img src="imgs/Greenheck_Logo_Horizontal_Blue.png" alt="Greenheck" />
+          <nav>
+            <ul>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Building Type</a></li>
+              <li><a href="#">Resources</a></li>
+              <li><a href="#">Education</a></li>
+              <li><a href="#">Support</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
