refactor(header): improve CSS structure and add class names to navigation
Restructure the CSS for better readability and maintainability by grouping related styles and adding descriptive class names to the navigation elements. This enhances the organization of the code and prepares it for future updates.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,23 @@
         </div>
         <div class="site-header__logo-nav-bar">
           <img src="imgs/Greenheck_Logo_Horizontal_Blue.png" alt="Greenheck" />
-          <nav>
-            <ul>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Building Type</a></li>
-              <li><a href="#">Resources</a></li>
-              <li><a href="#">Education</a></li>
-              <li><a href="#">Support</a></li>
+          <nav class="site-header__navigation">
+            <ul class="site-header__nav-list">
+              <li class="site-header__nav-item">
+                <a href="#" class="site-header__nav-link">Products</a>
+              </li>
+              <li class="site-header__nav-item">
+                <a href="#" class="site-header__nav-link">Building Type</a>
+              </li>
+              <li class="site-header__nav-item">
+                <a href="#" class="site-header__nav-link">Resources</a>
+              </li>
+              <li class="site-header__nav-item">
+                <a href="#" class="site-header__nav-link">Education</a>
+              </li>
+              <li class="site-header__nav-item">
+                <a href="#" class="site-header__nav-link">Support</a>
+              </li>
             </ul>
           </nav>
         </div>
