--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>Greenheck - Building Value in Air</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=clarify"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="site-header">
@@ -41,6 +45,10 @@
                 <a href="#" class="site-header__nav-link">Support</a>
               </li>
             </ul>
+            <a href="#" class="outline-medium-btn-with-icon">
+              <span class="material-symbols-outlined clarify"> clarify </span>
+              Find My Rep</a
+            >
           </nav>
         </div>
       </div>
