feat(ui): add product dropdown menu and update header styles
Introduce a new dropdown menu for the "Products" navigation item, including icons and images for various product categories. Refactor CSS to improve maintainability by using CSS variables and organizing styles logically. Update the header layout to include search and account icons, and enhance button hover effects.

--- a/index.html
+++ b/index.html
@@ -1,57 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Greenheck - Building Value in Air</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=clarify"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header class="site-header">
-      <div class="site-header__container">
-        <div class="site-header__top-bar">
-          <div class="site-header__center">
-            <div class="site-header__center-text">
-              Experience Best-In-Class Product Selection with
-            </div>
-            <a href="#" class="site-header__ecaps-button">eCAPS</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Greenheck - Building Value in Air</title>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&URL_ADDRESS" />
+
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header class="site-header">
+    <div class="site-header__container">
+      <div class="site-header__top-bar">
+        <div class="site-header__center">
+          <div class="site-header__center-text">
+            Experience Best-In-Class Product Selection with
           </div>
-          <div class="site-header__right">
-            <a href="#" class="site-header__login-button">Login</a>
-            <a href="#" class="site-header__register-button">Register</a>
-          </div>
+          <a href="#" class="site-header__ecaps-button">eCAPS</a>
         </div>
-        <div class="site-header__logo-nav-bar">
-          <img src="imgs/Greenheck_Logo_Horizontal_Blue.png" alt="Greenheck" />
-          <nav class="site-header__navigation">
-            <ul class="site-header__nav-list">
-              <li class="site-header__nav-item">
-                <a href="#" class="site-header__nav-link">Products</a>
-              </li>
-              <li class="site-header__nav-item">
-                <a href="#" class="site-header__nav-link">Building Type</a>
-              </li>
-              <li class="site-header__nav-item">
-                <a href="#" class="site-header__nav-link">Resources</a>
-              </li>
-              <li class="site-header__nav-item">
-                <a href="#" class="site-header__nav-link">Education</a>
-              </li>
-              <li class="site-header__nav-item">
-                <a href="#" class="site-header__nav-link">Support</a>
-              </li>
-            </ul>
-            <a href="#" class="outline-medium-btn-with-icon">
-              <span class="material-symbols-outlined clarify"> clarify </span>
-              Find My Rep</a
-            >
-          </nav>
+        <div class="site-header__right font-size-22">
+          <a href="#" class="site-header__icon-button">
+            <span class="material-symbols-outlined font_black font_weight">search</span>
+          </a>
+          <span class="divder_line"></span>
+          <a href="#" class="site-header__icon-button">
+            <span class="material-symbols-outlined font_black font_weight">manage_accounts</span>
+          </a>
         </div>
       </div>
-    </header>
-  </body>
+      <div class="site-header__logo-nav-bar">
+        <img src="imgs/Greenheck_Logo_Horizontal_Blue.png" alt="Greenheck" />
+        <nav class="site-header__navigation">
+          <ul class="site-header__nav-list">
+            <li class="site-header__nav-item">
+              <a href="#" class="site-header__nav-link">Products</a>
+              <div class="dropdown-menu">
+                <h2 class="h2_products">PRODUCTS</h2>
+                <div class="dropdown-grid">
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/Fans.png" alt="Fans" class="dropdown-icon">
+                    <span>Fans</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/Dampers.png" alt="Dampers" class="dropdown-icon">
+                    <span>Dampers</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/Louvers.png" alt="Louvers" class="dropdown-icon">
+                    <span>Louvers</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/GrillesRegistersDiffusers.png" alt="Grilles, Registers & Diffusers" class="dropdown-icon">
+                    <span>Grilles, Registers & Diffusers</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/AirTerminalUnits.png" alt="Air Terminal Units" class="dropdown-icon">
+                    <span>Air Terminal Units</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/EnergyRecovery.png" alt="Energy Recovery" class="dropdown-icon">
+                    <span>Energy Recovery</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/100OutdoorAir.png" alt="100% Outdoor Air" class="dropdown-icon">
+                    <span>100% Outdoor Air</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/RooftopUnits.png" alt="Rooftop Units" class="dropdown-icon">
+                    <span>Rooftop Units</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/TamperedVentilation.png" alt="Tampered Ventilation" class="dropdown-icon">
+                    <span>Tampered Ventilation</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/SpaceHeating.png" alt="Space Heating" class="dropdown-icon">
+                    <span>Space Heating</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/AirflowMeasurement.png" alt="Airflow Measurement" class="dropdown-icon">
+                    <span>Airflow Measurement</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/HealthcareLaboratoriesCleanrooms.png" alt="Healthcare, Laboratories & Cleanrooms" class="dropdown-icon">
+                    <span>Healthcare, Laboratories & Cleanrooms</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/AccessoriesComplimentaryProducts.png" alt="Accessories & Complimentary Products" class="dropdown-icon">
+                    <span>Accessories & Complimentary Products</span>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="site-header__nav-item">
+              <a href="#" class="site-header__nav-link">Building Type</a>
+              <div class="dropdown-menu">
+                <div class="dropdown-grid">
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/icons/k12.svg" alt="K-12 School" class="dropdown-icon">
+                    <span>K-12 School</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/icons/higher-education.svg" alt="Higher Education" class="dropdown-icon">
+                    <span>Higher Education</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/icons/multi-family.svg" alt="Multi-Family" class="dropdown-icon">
+                    <span>Multi-Family</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/icons/healthcare.svg" alt="Healthcare Facility" class="dropdown-icon">
+                    <span>Healthcare Facility</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/icons/manufacturing.svg" alt="Manufacturing" class="dropdown-icon">
+                    <span>Manufacturing</span>
+                  </a>
+                  <a href="#" class="dropdown-item">
+                    <img src="imgs/icons/laboratory.svg" alt="Laboratory" class="dropdown-icon">
+                    <span>Laboratory</span>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="site-header__nav-item">
+              <a href="#" class="site-header__nav-link">Resources</a>
+            </li>
+            <li class="site-header__nav-item">
+              <a href="#" class="site-header__nav-link">Education</a>
+            </li>
+            <li class="site-header__nav-item">
+              <a href="#" class="site-header__nav-link">Support</a>
+            </li>
+          </ul>
+          <a href="#" class="outline-medium-btn-with-icon">
+            <span class="material-symbols-outlined">clarify</span>
+            Find My Rep</a>
+        </nav>
+      </div>
+    </div>
+  </header>
+</body>
+
 </html>
