fix(ui): standardize product names and update dropdown item styles
Correct the capitalization of product names in the dropdown menu for consistency. Remove unnecessary image elements from dropdown items to simplify the layout. Update hover styles in CSS to enhance visual feedback and maintain a cohesive design. Additionally, add VSCode settings for live server and color theme.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li class="site-header__nav-item">
               <a href="#" class="site-header__nav-link">Products</a>
               <div class="dropdown-menu">
-                <h2 class="h2_products">PRODUCTS</h2>
+                <h2 class="h2_products">Products</h2>
                 <div class="dropdown-grid">
                   <a href="#" class="dropdown-item">
                     <img src="imgs/Fans.png" alt="Fans" class="dropdown-icon">
@@ -100,28 +100,22 @@
               <div class="dropdown-menu">
                 <div class="dropdown-grid">
                   <a href="#" class="dropdown-item">
-                    <img src="imgs/icons/k12.svg" alt="K-12 School" class="dropdown-icon">
-                    <span>K-12 School</span>
+                    K-12 School
                   </a>
                   <a href="#" class="dropdown-item">
-                    <img src="imgs/icons/higher-education.svg" alt="Higher Education" class="dropdown-icon">
-                    <span>Higher Education</span>
+                    Higher Education
                   </a>
                   <a href="#" class="dropdown-item">
-                    <img src="imgs/icons/multi-family.svg" alt="Multi-Family" class="dropdown-icon">
-                    <span>Multi-Family</span>
+                    Multi-Family
                   </a>
                   <a href="#" class="dropdown-item">
-                    <img src="imgs/icons/healthcare.svg" alt="Healthcare Facility" class="dropdown-icon">
-                    <span>Healthcare Facility</span>
+                    Healthcare Facility
                   </a>
                   <a href="#" class="dropdown-item">
-                    <img src="imgs/icons/manufacturing.svg" alt="Manufacturing" class="dropdown-icon">
-                    <span>Manufacturing</span>
+                    Manufacturing
                   </a>
                   <a href="#" class="dropdown-item">
-                    <img src="imgs/icons/laboratory.svg" alt="Laboratory" class="dropdown-icon">
-                    <span>Laboratory</span>
+                    Laboratory
                   </a>
                 </div>
               </div>
