feat(dropdown): add submenu for Fans item with hover and close functionality
This commit introduces a new submenu for the "Fans" dropdown item, enhancing the user experience by providing detailed navigation options. The submenu is displayed on hover and can be closed using the back or close buttons. Additionally, the dropdown menu and submenu are hidden when the mouse leaves the menu area.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,48 @@
               <div class="dropdown-menu">
                 <h2 class="h2_products">Products</h2>
                 <div class="dropdown-grid">
-                  <a href="#" class="dropdown-item">
+                  <a href="#" class="dropdown-item" id="fans-menu-trigger">
                     <img src="imgs/Fans.png" alt="Fans" class="dropdown-icon">
                     <span>Fans</span>
                   </a>
+                  <div class="submenu">
+                    <div class="submenu-header">
+                      <div class="submenu-header-top">
+                        <a class="submenu-back">
+                          <span class="material-symbols-outlined">arrow_back</span>
+                          Product Menu
+                        </a>
+                        <span class="submenu-close material-symbols-outlined">close</span>
+                      </div>
+                      <div class="submenu-header-bottom">
+                        <h2 class="submenu-title">Fans</h2>
+                        <a href="#" class="submenu-item">View All</a>
+                      </div>
+                    </div>
+                    <div class="submenu-grid">
+                      <div class="submenu-column">
+                        <a href="#" class="submenu-item">Roof Exhaust</a>
+                        <a href="#" class="submenu-item">Roof Supply</a>
+                        <a href="#" class="submenu-item">Wall Mounted</a>
+                        <a href="#" class="submenu-item">Ceiling Exhaust</a>
+                        <a href="#" class="submenu-item">Inline</a>
+                      </div>
+                      <div class="submenu-column">
+                        <a href="#" class="submenu-item">Blowers</a>
+                        <a href="#" class="submenu-item">Gravity</a>
+                        <a href="#" class="submenu-item">Overhead HVLS</a>
+                        <a href="#" class="submenu-item">Plenums</a>
+                        <a href="#" class="submenu-item">Fume Exhaust</a>
+                      </div>
+                      <div class="submenu-column">
+                        <a href="#" class="submenu-item">Directional Destratification</a>
+                        <a href="#" class="submenu-item">Laboratory Exhaust</a>
+                        <a href="#" class="submenu-item">Arrays</a>
+                        <a href="#" class="submenu-item">Circulators</a>
+                        <a href="#" class="submenu-item">Condenser</a>
+                      </div>
+                    </div>
+                  </div>
                   <a href="#" class="dropdown-item">
                     <img src="imgs/Dampers.png" alt="Dampers" class="dropdown-icon">
                     <span>Dampers</span>
