style(index.html): add margin to improve spacing
The margin was added to enhance the visual spacing of the fixed element, ensuring better alignment and readability on the page.

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
   left: 50%;
   width: 100vw;
   padding: 24px 0;
+  margin: 15px;
   position: fixed;
   top: 120px;
   transform: translateX(-50%);
