--- a/index.html
+++ b/index.html
@@ -662,6 +662,16 @@
         </section>
       </div>
     </main>
+    <div id="footer-placeholder"></div>
+    <link rel="stylesheet" href="footer.css">
+    <script src="footer.js"></script>
+    <script>
+      fetch('footer.html')
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById('footer-placeholder').innerHTML = data;
+        });
+    </script>
     <script>
       // Navigation data
       const navigationData = {
