refactor(footer): update styling and replace social icons
Updated footer styling including border color, padding, and spacing. Replaced social media icons with new black and white versions for consistency.

--- a/footer.html
+++ b/footer.html
@@ -19,13 +19,13 @@
           <a href="#" class="site-footer__careers-btn">Careers</a>
           <div class="site-footer__social-icons">
             <a href="#" class="site-footer__social-link" aria-label="LinkedIn">
-              <img src="imgs/icons/linkedin.svg" alt="LinkedIn" class="site-footer__social-icon">
+              <img src="imgs/linked-icon-bw.svg" alt="LinkedIn" class="site-footer__social-icon">
             </a>
             <a href="#" class="site-footer__social-link" aria-label="Facebook">
-              <img src="imgs/icons/facebook.svg" alt="Facebook" class="site-footer__social-icon">
+              <img src="imgs/facebook-icon-bw.svg" alt="Facebook" class="site-footer__social-icon">
             </a>
             <a href="#" class="site-footer__social-link" aria-label="YouTube">
-              <img src="imgs/icons/youtube.svg" alt="YouTube" class="site-footer__social-icon">
+              <img src="imgs/youtube-icon-bw.svg" alt="YouTube" class="site-footer__social-icon">
             </a>
           </div>
         </div>
