feat: restructure header and footer with dynamic content and improved styling
This commit introduces a new header and footer structure, replacing the previous static HTML with dynamic content loaded from JSON. The header now includes a responsive navigation menu with submenu functionality, while the footer features updated styling and social media icons. Additionally, the old index.html file has been removed, and CSS has been modularized into separate header and footer stylesheets for better organization and maintainability.

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,8 @@
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&URL_ADDRESS"
+/>
+<link rel="stylesheet" href="./footer.css" />
 <footer class="site-footer">
   <div class="site-footer__container">
     <div class="site-footer__grid">
@@ -6,26 +11,36 @@
     <div class="site-footer__bottom">
       <div class="site-footer__bottom-container">
         <div class="site-footer__company-info">
-          <img src="imgs/Greenheck_Logo_Horizontal_Blue.png" alt="Greenheck" class="site-footer__logo" />
+          <img
+            src="imgs/Greenheck_Logo_Horizontal_Blue.png"
+            alt="Greenheck"
+            class="site-footer__logo"
+          />
           <div class="site-footer__legal-links">
-            <a href="#" class="site-footer__link">Shipping | Terms & Conditions | Compliance Policies | Privacy Statement</a>
+            <a href="#" class="site-footer__link"
+              >Shipping | Terms & Conditions | Compliance Policies | Privacy Statement</a
+            >
             <div class="site-footer__address">
               <span>P.O. Box 410 Schofield, WI 54476 | (715) 359-6171 | Contact Us</span>
             </div>
           </div>
         </div>
-       
+
         <div class="site-footer__social-links">
           <a href="#" class="site-footer__careers-btn">Careers</a>
           <div class="site-footer__social-icons">
             <a href="#" class="site-footer__social-link" aria-label="LinkedIn">
-              <img src="imgs/linked-icon-bw.svg" alt="LinkedIn" class="site-footer__social-icon">
+              <img src="imgs/linked-icon-bw.svg" alt="LinkedIn" class="site-footer__social-icon" />
             </a>
             <a href="#" class="site-footer__social-link" aria-label="Facebook">
-              <img src="imgs/facebook-icon-bw.svg" alt="Facebook" class="site-footer__social-icon">
+              <img
+                src="imgs/facebook-icon-bw.svg"
+                alt="Facebook"
+                class="site-footer__social-icon"
+              />
             </a>
             <a href="#" class="site-footer__social-link" aria-label="YouTube">
-              <img src="imgs/youtube-icon-bw.svg" alt="YouTube" class="site-footer__social-icon">
+              <img src="imgs/youtube-icon-bw.svg" alt="YouTube" class="site-footer__social-icon" />
             </a>
           </div>
         </div>
@@ -36,3 +51,5 @@
     </div>
   </div>
 </footer>
+
+<script src="footer.js"></script>
