feat(header): implement mobile header bar and enhance mobile navigation
- Add a mobile header bar with logo and hamburger menu for improved navigation on smaller screens.
- Update mobile navigation toggle button styles and functionality.
- Adjust padding and margins for better layout consistency across mobile views.
- Replace icons for back navigation and update mobile nav button behavior.
- Introduce new CSS rules for mobile header visibility and styling.

--- a/header.html
+++ b/header.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="./header.css" />
   </head>
   <body>
+    <div class="mobile-header-bar">
+      <img src="./imgs/greenheck-white-logo.png" alt="Greenheck" class="mobile-header-logo" />
+      <button id="mobile-nav-toggle" aria-label="Open menu" class="mobile-header-hamburger">
+        <span class="material-symbols-outlined">menu</span>
+      </button>
+    </div>
     <nav id="mobile-nav" aria-modal="true" role="dialog" tabindex="-1">
       <div class="mobile-nav-search-row">
         <div class="mobile-nav-search-group">
@@ -40,9 +46,6 @@
         </a>
       </div>
     </nav>
-    <button id="mobile-nav-toggle" aria-label="Open menu">
-      <span class="material-symbols-outlined">menu</span>
-    </button>
     <header class="site-header">
       <div class="site-header__container">
         <div class="site-header__top-bar">
@@ -92,20 +95,6 @@
         "
       >
         <h1>Welcome to Greenheck</h1>
-        <p
-          style="
-            font-size: 16px;
-            line-height: 1.5;
-            color: #333;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-          "
-        >
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-          ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
         <p
           style="
             font-size: 16px;
