--- a/footer.html
+++ b/footer.html
@@ -60,8 +60,6 @@
       .footer-info a:last-child::after {
         content: none;
       }
-      .footer-section {
-      }
 
       .footer-heading {
         font-size: 1.25rem;
@@ -128,7 +126,8 @@
 
       /* Footer bottom */
       .footer-bottom {
-        border-top: 1px solid var(--footer-border);
+        /* border-top: 1px solid var(--footer-border); */
+        background-color: #ffffff;
         margin-top: 48px;
         padding: 32px 32px 24px 32px;
         display: flex;
@@ -249,7 +248,7 @@
       }
 
       /* Tablet styles */
-      @media (max-width: 1024px) {
+      /* @media (max-width: 1024px) {
         .footer-main {
           grid-template-columns: repeat(3, 1fr);
           gap: 40px 32px;
@@ -264,9 +263,9 @@
         .footer-brand {
           margin-bottom: 12px;
         }
-      }
+      } */
 
-      /* Mobile styles */
+      /* Tablet styles */
       @media (max-width: 879px) {
         .footer-info-contact {
           display: flex;
@@ -293,18 +292,22 @@
           justify-content: space-between;
           align-items: center;
           gap: 32px;
-          width: 100%;
+          width: auto;
+          margin: 0 90px;
         }
         .footer-main {
-          background-color: #ffffff;
-          display: block;
+          
+          display: flex;
+          flex-direction: column;
           padding: 24px 8px 0 8px;
-          width: 696px;
-          height: 540px;
+          max-width: 696px;
+          gap: 2px;
+          width: 100%;
+          margin-bottom: 45px;
         }
         .footer-section {
-          border-bottom: 1px solid var(--footer-border);
-          margin-bottom: 0;
+          background-color: #ffffff;
+          padding: 0 20px;
         }
         .site-footer__logo {
           height: 44px;
@@ -367,6 +370,8 @@
           align-items: center;
           order: 3;
           width: 100%;
+          font-size: 12px;
+          font-weight: 400;
         }
         .footer-social-container {
           order: 2;
@@ -382,8 +387,24 @@
         .footer-copyright {
           margin-top: 8px;
           align-self: anchor-center;
+          font-size: 12px;
+        }
+
+        .footer-links {
+          font-size: 14px;
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
         }
       }
+
+      /* Mobile styles */
+      @media (max-width: 409px) {
+        .footer-info a:after {
+          content: 'none';
+        } 
+       }
+      
 
       @media (min-width: 1025px) {
         .footer-bottom {
